Create feature: users can watch users profiles, if they are public
